--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+# ===============================
+# APPLICATION PROPERTIES
+# ===============================
+server.port=8081
+spring.main.banner-mode=off
+#logging.level.root=off
+
+
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+# Using MySQL database
+spring.datasource.url = jdbc:mysql://localhost:3306/eregistrar-db
+spring.datasource.username = registrar
+spring.datasource.password = registrar123
+#spring.datasource.username = students-db-sys
+#spring.datasource.password = test1234
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
