Student registration completed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@
 server.port=8082
 spring.main.banner-mode=off
 #logging.level.root=off
-
+spring.thymeleaf.prefix: file:src/main/resources/templates/
+spring.thymeleaf.cache: false
 
 
 # ===============================
