--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.thymeleaf.cache: false
 spring.datasource.url = jdbc:mysql://localhost:3306/eregistrar-db
 spring.datasource.username = registrar
 spring.datasource.password = registrar123
-#spring.datasource.username = students-db-sys
+#spring.datasource.username = users-db-sys
 #spring.datasource.password = test1234
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
@@ -26,4 +26,7 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.security.user.name=anna
+spring.security.user.password=test1234
 
